fix: remove explicit background color from dark mode post

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -59,7 +59,6 @@
 
 .darkmode .post,
 .darkmode .post-block {
-  background-color: #2c2c2e !important;
   border-color: #38383a !important;
   box-shadow: none !important;
 }
